--- a/express/views/layout.hbs
+++ b/express/views/layout.hbs
@@ -32,11 +32,13 @@
   </nav>
   {{{body}}}
   <!-- Footer-->
-  <footer class="py-5 bg-dark">
-    <div class="container">
+  <div class="container text-center " style="display: inline;  ">
+    <footer class="py-5 bg-dark">
+
       <p class="m-0 text-center text-white">Copyright &copy; Bus Booking 2022</p>
-    </div>
-  </footer>
+
+    </footer>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
