--- a/express/public/stylesheets/style.css
+++ b/express/public/stylesheets/style.css
@@ -11316,8 +11316,8 @@ textarea.form-control-lg {
 }
 
 footer {
-  position:absolute;
-  bottom:0;
+  bottom:0 !important;
   left:0;
   width:100%;
+  margin-bottom: 0px !important;
 }
