--- a/express/views/index.hbs
+++ b/express/views/index.hbs
@@ -1,4 +1,3 @@
-
 <!-- Header - set the background image for the header in the line below-->
 <header class="py-5 bg-image-full">
     <div class="text-center m-5">
@@ -10,16 +9,16 @@
                     <label for="partenza" class="form-label">Da</label>
                     <select id="partenza" class="form-select" required name="partenza">
                         {{#each data}}
-                            <option>{{this.partenza}}</option>
-                         {{/each}}
+                        <option>{{this.partenza}}</option>
+                        {{/each}}
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label for="arrivo" class="form-label">A</label>
                     <select id="arrivo" class="form-select" required name="arrivo">
                         {{#each data}}
-                            <option>{{this.arrivo}}</option>
-                         {{/each}}
+                        <option>{{this.arrivo}}</option>
+                        {{/each}}
                     </select>
                 </div>
             </div>
@@ -34,7 +33,7 @@
                 </div>-->
             </div>
             <div class="col-12 my-5">
-                <button  class="btn btn-secondary">Search</button>
+                <button class="btn btn-secondary">Search</button>
             </div>
         </form>
 
@@ -42,7 +41,8 @@
 </header>
 
 <!-- Image element - set the background image for the header in the line below-->
-<div class="py-5 bg-image-full" style="background-image: url('https://www.kotak.com/content/dam/Kotak/digital-banking/insta-services/kaymall/1440X400-Bus.jpg')">
+<div class="py-5 bg-image-full"
+    style="background-image: url('https://www.kotak.com/content/dam/Kotak/digital-banking/insta-services/kaymall/1440X400-Bus.jpg')">
     <!-- Put anything you want here! The spacer below with inline CSS is just for demo purposes!-->
     <div style="height: 20rem"></div>
 </div>
@@ -51,12 +51,19 @@
     <div class="container my-5">
         <div class="row justify-content-center">
             <div class="col-lg-6">
-                <h2>Engaging Background Images</h2>
-                <p class="lead">The background images used in this template are sourced from Unsplash and are open
-                    source and free to use.</p>
-                <p class="mb-0">I can't tell you how many people say they were turned off from science because of a
-                    science teacher that completely sucked out all the inspiration and enthusiasm they had for the
-                    course.</p>
+                <h2>Cerca qui la tua prenotazione!</h2>
+                <p class="lead">
+                <form method="post" enctype="application/x-www-form-urlencoded" action="/api/prenotazione/code">
+                    <div class="col-4 my-4">
+                        <label for="code" class="form-label">Codice Prenotazione</label>
+                        <input type="text" name="code" id="code" class="form-control" required placeholder="Inserisci qui...">
+                    </div>
+                    <div class="col-4 my-4">
+                        <button class="btn btn-secondary">Search</button>
+                    </div>
+                </form>
+                </p>
+
             </div>
         </div>
     </div>
